# qSimCells

./: README.md  environment.yml  package_structure.txt  pyproject.toml  qSim_cell_chat.ipynb
qsim_cells/: generative.py  grn_utils.py
r_cellchat_qsim/: .Rhistory  cellchat_test.R  net_Co_mapping_DEG_results.csv  qsimDB.xlsx  sim_merged_datasets_co_mo.rds
